# clothSimulation

./: CMakeLists.txt  launch.sh
include/config/: Config.hpp  TileHandler.hpp
include/core/: Constraint.h  InputHandler.h  InputHandler.hpp  Tile.hpp  World.hpp
include/object/: Particle.h
include/tile/: Sand.hpp
src/: main.cpp
